--- a/README
+++ b/README
@@ -26,7 +26,8 @@ What's Included
 ---------------
 Here is an alphabetical list:
 
-* libkcal: C++ api for the iCalendar and vCalendar formats
+* libkcal: C++ API for the iCalendar and vCalendar formats
+* libktnef: C++ API for the handling of TNEF data
 
 
 Licensing
