rename "libemailfunctions" source dir to "emailfunctions"
svn path=/trunk/KDE/kdepimlibs/; revision=556751

--- a/Mainpage.dox
+++ b/Mainpage.dox
@@ -8,8 +8,8 @@
         * Additionally, you can subscribe or read the mailing lists for any
         * additions and/or modifications to the API.
         *
-        * - <a href="libemailfunctions/html/index.html"><b>libemailfunctions</b></a>
-        *   (<a href="libemailfunctions/html/classes.html">classes</a>)\n
+        * - <a href="emailfunctions/html/index.html"><b>emailfunctions</b></a>
+        *   (<a href="emailfunctions/html/classes.html">classes</a>)\n
         *   <i>A library for general purpose email handling.</i>
 	*
         * - <a href="libkcal/html/index.html"><b>libkcal</b></a>
