--- a/README
+++ b/README
@@ -26,8 +26,8 @@ What's Included
 ---------------
 Here is an alphabetical list:
 
-* libkcal: C++ API for the iCalendar and vCalendar formats
-* libktnef: C++ API for the handling of TNEF data
+* kcal: C++ API for the iCalendar and vCalendar formats
+* ktnef: C++ API for the handling of TNEF data
 
 
 Licensing
