--- a/README
+++ b/README
@@ -27,6 +27,7 @@ What's Included
 Here is an alphabetical list:
 
 * kcal: C++ API for the iCalendar and vCalendar formats
+* kcal/libical: a basic iCalendar protocol implementation, see RFCs 2245,2246
 * ktnef: C++ API for the handling of TNEF data
 
 
