--- a/Mainpage.dox
+++ b/Mainpage.dox
@@ -16,6 +16,9 @@
  * - <a href="kcal/html/index.html"><b>kcal</b></a>.
  *   <i>An API for the iCalendar and vCalendar formats.</i>
  *
+ * - <a href="kldap/html/index.html"><b>kldap</b></a>.
+ *   <i>An API for accessing LDAP.</i>
+ *
  * - <a href="ktnef/html/index.html"><b>ktnef</b></a>.
  *   <i>An API for the handling of TNEF data.</i>
  *
