--- a/README
+++ b/README
@@ -28,6 +28,7 @@ Here is an alphabetical list:
 
 * kcal: C++ API for the iCalendar and vCalendar formats
 * kcal/libical: a basic iCalendar protocol implementation, see RFCs 2245,2246
+* kldap: C++ API for LDAP access
 * ktnef: C++ API for the handling of TNEF data
 
 
