--- a/README
+++ b/README
@@ -30,6 +30,7 @@ Here is an alphabetical list:
 * kcal/libical: a basic iCalendar protocol implementation, see RFCs 2245,2246
 * kldap: C++ API for LDAP access
 * ktnef: C++ API for the handling of TNEF data
+* kxmlrpclient: An XML-RPC client library
 
 
 Licensing
