added section for kxmlrpcclient lib.
svn path=/trunk/KDE/kdepimlibs/; revision=571568

--- a/Mainpage.dox
+++ b/Mainpage.dox
@@ -25,6 +25,9 @@
  * - <a href="kresources/html/index.html"><b>kresources</b></a>.
  *   <i>The KDE Resource framework.</i>
  *
+ * - <a href="kxmlrpcclient/html/index.html"><b>kxmlrpcclient</b></a>.
+ *   <i>An XML-RPC client library.</i>
+ *
  * @b Download the complete API documentation from
  * <a href="http://api.kde.org/">api.kde.org</a>.
  *
