add mainpage content for libsyndication apidox
svn path=/trunk/KDE/kdepimlibs/; revision=577488

--- a/syndication/Mainpage.dox
+++ b/syndication/Mainpage.dox
@@ -1,1 +1,17 @@
+/** 
+@mainpage libsyndication - An RSS/Atom parser library
+
+libsyndication is a parser library for RSS and Atom feeds.
+RSS (0.9/1.0, 0.91..2.0) and Atom (0.3 and 1.0) feeds are supported.
+It offers a unified, format-agnostic view on the parsed feed, 
+so that the using application doesn't need to distinguish between feed formats.
+
+@author Frank Osterfeld  \<frank.osterfeld@kdemail.net\>
+
+<b>License: LGPL</b>
+
+For questions and discussions about libsyndication either contact the author 
+or the <a href="mailto:kde-pim@kde.org">kde-pim@kde.org</a> mailing list.
+
+*/
 // DOXYGEN_EXCLUDE = mapper
