added some info for the apidocs main page of libsyndication and kxmlrpcclient. . Narayan, I used the description from the README, you might check and change it to your likings.
CCMAIL: narayannewton@gmail.com

svn path=/trunk/KDE/kdepimlibs/; revision=577494

--- a/syndication/Mainpage.dox
+++ b/syndication/Mainpage.dox
@@ -1,10 +1,17 @@
 /** 
 @mainpage libsyndication - An RSS/Atom parser library
 
+@section purpose Purpose
+
 libsyndication is a parser library for RSS and Atom feeds.
+
+@section desc Description
+
 RSS (0.9/1.0, 0.91..2.0) and Atom (0.3 and 1.0) feeds are supported.
-It offers a unified, format-agnostic view on the parsed feed, 
+libsyndication offers a unified, format-agnostic view on the parsed feed, 
 so that the using application doesn't need to distinguish between feed formats.
+
+TODO: add some coding examples here.
 
 @author Frank Osterfeld  \<frank.osterfeld@kdemail.net\>
 
