--- a/kxmlrpcclient/Mainpage.dox
+++ b/kxmlrpcclient/Mainpage.dox
@@ -1,26 +1,34 @@
-/** 
-@mainpage kxmlrpcclient - An XML-RPC client library for KDE
+/*!
+ * @mainpage kxmlrpcclient - an XML-RPC client library for KDE.
+ *
+ * @section purpose Purpose
+ *
+ * kxmlrpclient provides client-side support for the XML-RPC protocol.
+ *
+ * @section desc Description
+ *
+ * This library contains simple XML-RPC Client support. It is used mainly
+ * by the egroupware module of kdepim, but is a complete client and is
+ * quite easy to use. Only one interface is exposed to the world,
+ * kxmlrpcclient/client.h and of that interface, you only need to
+ * use 3 methods: setUrl, setUserAgent and call.
+ *
+ * A small note on authentication. If you will be accessing an XML-RPC server
+ * which uses HTTP-AUTH, simply set the user and pass in the KURL. Digest
+ * authentication is more complicated and not supported at this time.
+ *
+ * @authors
+ * Narayan Newton  \<narayannewton@gmail.com\>,
+ * Frerich Raabe \<raabe@kde.org\>,
+ * Tobias Koenig \<tokoe@kde.org\>
+ *
+ * @maintainer Narayan Newton  \<narayannewton@gmail.com\>
+ *
+ * @licenses
+ * @lgpl
+ *
+ * kxmlrpcclient development is discussed on the
+ * <a href="mailto:kde-pim@kde.org">kde-pim@kde.org</a> mailing list.
+ */
 
-@section purpose Purpose
-
-kxmlrpclient provides client-side support for the XML-RPC protocol.
-
-@section desc Description
-
-This library contains simple XML-RPC Client support. It is used mainly
-by the egroupware module of kdepim, but is a complete client and is
-quite easy to use. Only one interface is exposed to the world,
-kxmlrpcclient/client.h and of that interface, you only need to
-use 3 methods: setUrl, setUserAgent and call.
-
-A small note on authentication. If you will be accessing an XML-RPC server
-which uses HTTP-AUTH, simply set the user and pass in the KURL. Digest
-authentication is more complicated and not supported at this time.
-
-@author Narayan Newton  \<narayannewton@gmail.com\>
-
-<b>License: LGPL</b>
-
-kxmlrpcclient development is discussed on the 
-<a href="mailto:kde-pim@kde.org">kde-pim@kde.org</a> mailing list.
-*/
+// DOXYGEN_PROJECTNAME=KXMLRPC Client Library
