--- a/kldap/Mainpage.dox
+++ b/kldap/Mainpage.dox
@@ -1,21 +1,22 @@
-/*
-  Mainpage.dox
+/*!
+ * @mainpage kldap - an LDAP access API for KDE.
+ *
+ * @section purpose Purpose
+ * 
+ * LIBKLDAP 
+ *
+ * @section desc Description
+ *
+ * Allows LDAP accessing with a convenient Qt style C++ API.
+ *
+ * @author György Szombathelyi \<gyurco@freemail.hu\>
+ *
+ * @maintainer György Szombathelyi \<gyurco@freemail.hu\>
+ *
+ * @licenses
+ * @lgpl
  */
 
-/**
-@mainpage LIBKLDAP - LDAP access API for KDE
-
-@section purpose Purpose
-
-LIBKLDAP 
-
-@section features Features
-
-- Allows LDAP accessing with a convenient Qt style C++ API.
-
-@author György Szombathelyi \<gyurco@freemail.hu\>
-
-<b>LICENCE: LGPL</b>
-*/
+// DOXYGEN_PROJECTNAME=KLDAP Library
 // DOXYGEN_REFERENCES = kdecore kdeui
 // DOXYGEN_EXCLUDE = scripts
