Documentation edit to explain digest-auth.
svn path=/trunk/KDE/kdepimlibs/; revision=578319

--- a/kxmlrpcclient/Mainpage.dox
+++ b/kxmlrpcclient/Mainpage.dox
@@ -15,7 +15,8 @@
  *
  * A small note on authentication. If you will be accessing an XML-RPC server
  * which uses HTTP-AUTH, simply set the user and pass in the KURL. Digest
- * authentication is more complicated and not supported at this time.
+ * authentication is more complicated and requires the use of three utility
+ * methods: enableDigestAuth, disableDigestAuth and digestAuth.
  *
  * @authors
  * Narayan Newton  \<narayannewton@gmail.com\>,
