--- a/kxmlrpcclient/README
+++ b/kxmlrpcclient/README
@@ -14,7 +14,8 @@ use 3 methods: setUrl, setUserAgent and call.
 
 A small note on authentication. If you will be accessing an XML-RPC server
 which uses HTTP-AUTH, simply set the user and pass in the KURL. Digest
-authentication is more complicated and not supported at this time.
+authentication is more complicated and requires the use of three utility
+methods: enableDigestAuth, disableDigestAuth and digestAuth.
 
 Licensing
 ---------
