--- a/kcal/Mainpage.dox
+++ b/kcal/Mainpage.dox
@@ -1,19 +1,38 @@
-/** \mainpage kcal - The KDE calendar access library.
+/*!
+ * @mainpage KCal - the KDE calendar access library.
+ *
+ * @section purpose Purpose
+ *
+ * This library provides access to and handling of calendar data.
+ * It supports the standard formats iCalendar and vCalendar and the
+ * group scheduling standard iTIP.
+ *
+ * @section desc Description
+ *
+ * A calendar contains information like incidences (events, to-dos, journals),
+ * alarms, time zones, and other useful information.  This API provides
+ * access to that calendar information via well known calendar formats
+ * <a href="http://en.wikipedia.org/wiki/Icalendar">iCalendar (or iCal)</a>
+ * and the older <a href="http://en.wikipedia.org/wiki/VCalendar">vCalendar</a>.
+ *
+ * Credit goes to Eric Bossum \<eric@softwarestudio.org\> for his libical
+ * software that does most of the heavy-lifting of the iCalendar support
+ * that is abstracted by this API.
+ *
+ * @authors
+ * Preston Brown \<pbrown@kde.org\>,
+ * Reinhold Kainhofer \<reinhold@kainhofer.com\>,
+ * Cornelius Schumacher \<schumacher@kde.org\>
+ *
+ * @maintainers
+ * Reinhold Kainhofer \<reinhold@kainhofer.com\>,
+ * Cornelius Schumacher \<schumacher@kde.org\>,
+ * Allen Winter \<winter@kde.org\>
+ *
+ * @licenses
+ * @lgpl
+ */
 
-This library provides access to and handling of calendar data. It supports the
-standard formats iCalendar and vCalendar and the group scheduling standard iTIP.
-
-<b>Important:</b> This is mainly a KDE PIM internal library. The API might be
-subject to source and binary incompatible changes.
-
-If you use this library for kdepim-external projects, please let us know, so we
-can coordinate possible changes.
-
-kcal library development is discussed on the <a
-href="mailto:kde-pim@kde.org">kde-pim@kde.org</a> mailing list.
-
-*/
-
+// DOXYGEN_PROJECTNAME=KCal Library
 // DOXYGEN_EXCLUDE = libical
 // DOXYGEN_REFERENCES=kresources
-
