minor for the authors list.
svn path=/trunk/KDE/kdepimlibs/; revision=588434

--- a/kcal/Mainpage.dox
+++ b/kcal/Mainpage.dox
@@ -20,6 +20,7 @@
  * that is abstracted by this API.
  *
  * @authors
+ * The major authors of this library are (in alphabetical order):\n
  * Preston Brown \<pbrown@kde.org\>,
  * Reinhold Kainhofer \<reinhold@kainhofer.com\>,
  * Cornelius Schumacher \<schumacher@kde.org\>
