update authors, maintainers
svn path=/trunk/KDE/kdepimlibs/; revision=588436

--- a/kldap/Mainpage.dox
+++ b/kldap/Mainpage.dox
@@ -9,9 +9,9 @@
  *
  * Allows LDAP accessing with a convenient Qt style C++ API.
  *
- * @author György Szombathelyi \<gyurco@freemail.hu\>
+ * @authors György Szombathelyi \<gyurco@freemail.hu\>
  *
- * @maintainer György Szombathelyi \<gyurco@freemail.hu\>
+ * @maintainers György Szombathelyi \<gyurco@freemail.hu\>
  *
  * @licenses
  * @lgpl
