--- a/syndication/Mainpage.dox
+++ b/syndication/Mainpage.dox
@@ -14,9 +14,9 @@
  *
  * @todo: add some coding examples here.
  *
- * @author Frank Osterfeld  \<frank.osterfeld@kdemail.net\>
+ * @authors Frank Osterfeld  \<frank.osterfeld@kdemail.net\>
  *
- * @maintainer Frank Osterfeld  \<frank.osterfeld@kdemail.net\>
+ * @maintainers Frank Osterfeld  \<frank.osterfeld@kdemail.net\>
  *
  * @licenses
  * @lgpl
