We have just invented DOXYGEN_TOOLTIP for making the components menu in Oxygen-style APIDOX sexy.
svn path=/trunk/KDE/kdepimlibs/; revision=588783

--- a/emailfunctions/Mainpage.dox
+++ b/emailfunctions/Mainpage.dox
@@ -12,3 +12,5 @@ Everything lives in the KEmailAddressTools namespace.
   - @ref emailidn
 
 */
+
+// DOXYGEN_TOOLTIP = "A library for general purpose email handling."
