--- a/README
+++ b/README
@@ -29,6 +29,7 @@ Here is an alphabetical list:
 * kcal: C++ API for the iCalendar and vCalendar formats
 * kcal/libical: a basic iCalendar protocol implementation, see RFCs 2245,2246
 * kldap: C++ API for LDAP access
+* kmime: C++ API for MIME handling
 * ktnef: C++ API for the handling of TNEF data
 * kxmlrpclient: An XML-RPC client library
 * syndication: An RSS/Atom feed parser library
