Now that kio_smtp works again, add SMTP encryption and authentication auto-detection.
svn path=/trunk/KDE/kdepim/mailtransport/; revision=615023

--- a/mailtransport/TODO
+++ b/mailtransport/TODO
@@ -29,8 +29,9 @@ TransportComboBox
 TransportConfigDialog
 ---------------------
 - enforce unique name
-- SMTP auth method discovery (kio_smtp needs to fixed first)
 - Sanity checks as in kmtransport
+- adjust port and available auth methods on encryption change
+- reset enc/auth selection when host changes
 
 Transport
 ---------
