Sending mails via SMTP works now, using at most one slave per transport as it's done in KMail.
svn path=/trunk/KDE/kdepim/mailtransport/; revision=619462

--- a/mailtransport/TODO
+++ b/mailtransport/TODO
@@ -43,8 +43,10 @@ TransportJob
 SendmailJob
 -----------
 - implement doKill()
+- indicate progress
 
 SMTPJob
 -------
-- complete start()
+- get rid of kmail specific stuff in start()
 - implement doKill()
+- indicate progress
