No implicit ascii casts, mostly harmless stuff but better be on the safe side.
svn path=/trunk/KDE/kdepim/mailtransport/; revision=620595

--- a/mailtransport/TODO
+++ b/mailtransport/TODO
@@ -4,7 +4,7 @@ Mail Transport TODO
 General
 -------
 - use own namespace
-- compile with QT_NO_ASCII_CAST and without QT3_SUPPORT
+- compile without QT3_SUPPORT
 - fix license/copyright, some of the code is taken from KMail/KNode
 
 Migration
