--- a/mailtransport/Mainpage.dox
+++ b/mailtransport/Mainpage.dox
@@ -9,7 +9,7 @@
 
   The mailtransport module consists of the following components:
   - a shared library containing the above listed functionality
-  - a KCModule which can be embedded into your application to provide mail transport configuration (not yet implemented)
+  - a KCModule which can be embedded into your application to provide mail transport configuration
   - a KDED module which provides a D-Bus interface to mail transport settings and mail sending (not yet implemented)
 */
 
