add import from KEMailSettings
svn path=/trunk/KDE/kdepim/mailtransport/; revision=622563

--- a/mailtransport/TODO
+++ b/mailtransport/TODO
@@ -14,6 +14,7 @@ Migration
 TransportManager
 ----------------
 - load passwords if another instance opens the wallet
+- load passwords if application opens wallet
 - add D-Bus interface for sending mails
 
 Transport
